--- a/css/main.css
+++ b/css/main.css
@@ -1318,4 +1318,8 @@ body {
 .container * {
   -webkit-animation-play-state: paused !important;
           animation-play-state: paused !important;
+
 }/*# sourceMappingURL=main.css.map */
+
+.audio{margin-bottom: 10px;
+margin-right: -200px;}
